add <p> on  html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hola, mundo!</h1>
-    <p>Este es un ejemplo de un documento HTML básico.</p>
+    <p>Bienvenidos a Introducción a la Informática</p>
 </body>
 </html>
