--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hola, mundo!</h1>
+    <p>Bienvenido a Introducción a la Informática</p>
     <p>Este es un ejemplo de un documento HTML básico.</p>
 </body>
 </html>
