--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hola, mundo!</h1>
     <p>Bienvenidos a Introducción a la Informática</p>
+    <p>Empezando ..</p>
 </body>
 </html>
